Fixed download progress bars not showing on page load, made progress bar loading smoother

--- a/css/style.css
+++ b/css/style.css
@@ -360,9 +360,11 @@ body {
   position: absolute;
   left: 0;
   top: 0;
+  width: 0;
   height: 10px;
   border-radius: 5px;
   background: #ff5959;
+  transition: 0.6s all;
 }
 
 /*SETTINGS*/
